--- a/nginx/bookmark-app.conf
+++ b/nginx/bookmark-app.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    root /usr/src/bookmark-app;
+    root /usr/src/bookmark-app/dist;
 
     index index.html;
 
